package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "AssignBrokerPB";

message AssignBroker {
    required string topic = 1;
    required string broker_server = 2;
    required int32 broker_port = 3;
    optional string instance_id = 4;
}